--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,12 +8,10 @@
   font-size: 36px;
 }
 
-#three {
-  font-size: 36px;
+.adjust-font-size {
+  font-size: 24px;
 }
-
 #four {
   background-color: lightgreen;
-  font-size: 24px;
   font-weight: bold;
 }
