--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,32 +7,36 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 10px;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
   margin-top: auto;
-  margin-bottom: 10px;
-  padding: 10px;
+  margin-bottom: 8px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
-  margin-bottom: 10px;
-  padding: 10px;
+  margin-bottom: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
   text-align: center;
-  padding: 10px;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   display: block;
-  padding: 10px 20px;
+  padding: 8px 24px;
   margin: auto;
 }
